--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.437.0",
     "next": "14.2.7",
+    "node-appwrite": "^14.0.0",
     "query-string": "^9.1.0",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
