Add Plaid and Dwolla for connecting bank account

--- a/.env
+++ b/.env
@@ -9,3 +9,18 @@ APPWRITE_DATABASE_ID = 66d69e42001cf588b91c
 APPWRITE_USER_COLLECTION_ID = 66d69e63003d341db9a0
 APPWRITE_TRANSACTIONS_COLECTION = 66d69e96000b1b8b2876
 APPWRITE_BANK_COLLECTION_ID = 66d69eb6001de352aa15
+
+
+#PLAID
+PLAID_CLIENT_ID = 66d77013a8b6d3001afe4675
+PLAID_SECRET = e08f917d4146aef3edd703b6b55bed
+PLAID_ENV = sandbox
+PLAID_PRODUCTS = auth,transactions,identity
+PLAID_COUNTRY_CODES = US,CA
+
+
+#Dwolla
+DWOLLA_KEY = TpluiC6W4fUWd1l5rxeVIilkuQS5Uy4g1T8nOBvR2M4akcOrsS
+DWOLLA_SECRET = vzrwvUnFJEAIU7hl9mnPD0PLEusOQLVu2vMeGoBYfZfs2xbr1c
+DWOLLA-BASE_URL = https://api-sandbox.dwolla.com
+DWOLLA_ENV = sandbox
