change api keys

--- a/.env
+++ b/.env
@@ -12,15 +12,15 @@ APPWRITE_BANK_COLLECTION_ID = 66d69eb6001de352aa15
 
 
 #PLAID
-PLAID_CLIENT_ID = 66d77013a8b6d3001afe4675
-PLAID_SECRET = e08f917d4146aef3edd703b6b55bed
-PLAID_ENV = sandbox
-PLAID_PRODUCTS = auth,transactions,identity
-PLAID_COUNTRY_CODES = US,CA
+PLAID_CLIENT_ID= 66dc4677e40771001aff0234
+PLAID_SECRET= d41cb0b0c3d1446d3d49c32a9392eb
+PLAID_ENV=sandbox
+PLAID_PRODUCTS=auth,transactions,identity
+PLAID_COUNTRY_CODES=US,CA
 
 
-#Dwolla
-DWOLLA_KEY = TpluiC6W4fUWd1l5rxeVIilkuQS5Uy4g1T8nOBvR2M4akcOrsS
-DWOLLA_SECRET = vzrwvUnFJEAIU7hl9mnPD0PLEusOQLVu2vMeGoBYfZfs2xbr1c
-DWOLLA-BASE_URL = https://api-sandbox.dwolla.com
-DWOLLA_ENV = sandbox
+#DWOLLA
+DWOLLA_KEY= a2JiFoWuwxFyudIwaUih3w508HWb6F1MM4226S5RxZsBIkilQX
+DWOLLA_SECRET= VxajleYhuJu1H3Qo5oT0mgpvpkGzVNLIYzXjDYo05WGuuZzQXf
+DWOLLA_BASE_URL=https://api-sandbox.dwolla.com
+DWOLLA_ENV=sandbox
