--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
+    "@radix-ui/themes": "^3.1.3",
     "@sentry/nextjs": "^8.28.0",
     "autoprefixer": "^10.4.20",
     "chart.js": "^4.4.4",
